fix: help page with scrollbars

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,5 +23,9 @@
 
   .content-area {
     overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
